--- a/index.ipynb
+++ b/index.ipynb
@@ -4551,14 +4551,7 @@
    "source": [
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
-    "The model did fairly well. The naive accuracy rate (random guessing) was around 20%, and we are getting about 75% of the labels right.\n",
-    "\n",
-    "Looking at the confusion matrix, the largest areas of mislabeled posts were 50 (predicted rec.sport.hockey, actually sci.crypt, 54 (predicted rec.sport.\n",
-    "hockey, actually talk.politics.misc), and 54 (predicted sci.crypt, actually talk.politics.misc).\n",
-    "\n",
-    "Next steps for this process might be to examine some of these mislabeled examples to see if we can understand what went wrong, and potentially perform\n",
-    "additional feature engineering to help the model label these instances correctly. It's also possible that there is just some irreducible error in this\n",
-    "dataset, where those posts \"look like\" they should be in different category than they really are.\n",
+    "The model did fairly well than random guessing, and we are getting most of the labels right.\n",
     "\n",
     "\"\"\""
    ]
