--- a/index.ipynb
+++ b/index.ipynb
@@ -4553,6 +4553,13 @@
     "\"\"\"\n",
     "The model did fairly well than random guessing, and we are getting most of the labels right.\n",
     "\n",
+    "From the confusion matrix most of the most predictions are correct for each class. The class 2 performed best with 350 correct out of 399 this suggest\n",
+    "a strong accuracy. Class 4 performed the worst with 172 correct predictions\n",
+    "\n",
+    "Class 3 is sometimes mislabeled as class 2 or 4, indicating overlap of fetures\n",
+    "\n",
+    "The next step is probably to check for the cause of mislabeled examples and improve the features \n",
+    "\n",
     "\"\"\""
    ]
   },
