--- a/index.ipynb
+++ b/index.ipynb
@@ -4553,8 +4553,8 @@
     "\"\"\"\n",
     "The model did fairly well than random guessing, and we are getting most of the labels right.\n",
     "\n",
-    "From the confusion matrix most of the most predictions are correct for each class. The class 2 performed best with 350 correct out of 399 this suggest\n",
-    "a strong accuracy. Class 4 performed the worst with 172 correct predictions\n",
+    "From the confusion matrix most of the most predictions are correct for each class. The class 2 performed best with 350 correct predictions out of 399\n",
+    "this suggest a strong accuracy from the model. Class 4 performed the worst with 172 correct predictions\n",
     "\n",
     "Class 3 is sometimes mislabeled as class 2 or 4, indicating overlap of fetures\n",
     "\n",
